added: security scheme to swagger
