# classes/PleioRest/Controllers/Activities.php
@@ -5,6 +5,7 @@ class Activities {
     /**
      * @SWG\Get(
      *     path="/api/groups/{guid}/activities",
+     *     security={{"oauth2": {"scope"}}},
      *     tags={"activities"},
      *     summary="Find activities in a specific group.",
      *     description="Find the most recent activities from a specific group.",
@@ -95,6 +96,7 @@ class Activities {
     /**
      * @SWG\Post(
      *     path="/api/groups/{guid}/activities/mark_read",
+     *     security={{"oauth2": {"scope"}}},
      *     tags={"activities"},
      *     summary="Mark the activities in the specific group as read.",
      *     description="Mark the activities in the specific group as read till the most recent activity.",
